--- a/index.ipynb
+++ b/index.ipynb
@@ -31,8 +31,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    len supp  dose\n",
+       "0   4.2   VC   0.5\n",
+       "1  11.5   VC   0.5\n",
+       "2   7.3   VC   0.5\n",
+       "3   5.8   VC   0.5\n",
+       "4   6.4   VC   0.5"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "df = pd.read_csv('ToothGrowth.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -46,11 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df           F        PR(>F)\n",
+      "C(supp)    205.350000   1.0   11.446768  1.300662e-03\n",
+      "dose      2224.304298   1.0  123.988774  6.313519e-16\n",
+      "Residual  1022.555036  57.0         NaN           NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "formula = 'len ~ C(supp) + dose' \n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
    ]
   },
   {
@@ -80,11 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "lengths_OJ = df[df.supp=='OJ']['len']\n",
+    "lengths_VC = df[df.supp=='VC']['len']"
    ]
   },
   {
@@ -96,11 +202,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups."
+    "#Your code here; calculate the 2-sided p-value for a t-test comparing the two supplement groups.\n",
+    "def welch_t(a, b):    \n",
+    "    numerator = a.mean() - b.mean()\n",
+    "    \n",
+    "    # “ddof = Delta Degrees of Freedom”: the divisor used in the calculation is N - ddof, \n",
+    "    #  where N represents the number of elements. By default ddof is zero.\n",
+    "    \n",
+    "    denominator = np.sqrt(a.var(ddof=1)/a.size + b.var(ddof=1)/b.size)\n",
+    "    return np.abs(numerator/denominator)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = welch_t(lengths_OJ, lengths_VC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def welch_degf(a, b):\n",
+    "    \n",
+    "    \"\"\" Calculate the effective degrees of freedom for two samples. \"\"\"\n",
+    "    \n",
+    "    s1 = a.var(ddof=1) \n",
+    "    s2 = b.var(ddof=1)\n",
+    "    n1 = a.size\n",
+    "    n2 = b.size\n",
+    "    \n",
+    "    numerator = (s1/n1 + s2/n2)**2\n",
+    "    denominator = (s1/ n1)**2/(n1 - 1) + (s2/ n2)**2/(n2 - 1)\n",
+    "    \n",
+    "    return numerator/denominator\n",
+    "\n",
+    "degf = welch_degf(lengths_OJ, lengths_VC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.030317253940466915\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 1 - stats.t.cdf(t, degf)\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def p_value(a, b, two_sided=False):\n",
+    "\n",
+    "    t2 = welch_t(a, b)\n",
+    "    degf2 = welch_degf(a, b)\n",
+    "    \n",
+    "    p = 1-stats.t.cdf(t2, degf2)\n",
+    "    \n",
+    "    if two_sided:\n",
+    "        return 2*p\n",
+    "    else:\n",
+    "        return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.030317253940466915"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value(lengths_OJ, lengths_VC)"
    ]
   },
   {
@@ -116,13 +321,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; conduct an ANOVA F-test of the oj and vc supplement groups.\n",
     "#Compare the p-value to that of the t-test above. \n",
-    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)"
+    "#They should match (there may be a tiny fractional difference due to rounding errors in varying implementations)\n",
+    "def p_value2(a, b, two_sided=True):\n",
+    "\n",
+    "    t = welch_t(a, b)\n",
+    "    degf = welch_degf(a, b)\n",
+    "    \n",
+    "    p = 1-stats.t.cdf(t, degf)\n",
+    "    \n",
+    "    if two_sided:\n",
+    "        return 2*p\n",
+    "    else:\n",
+    "        return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06063450788093383"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value2(lengths_OJ, lengths_VC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df         F    PR(>F)\n",
+      "C(supp)    205.350000   1.0  3.668253  0.060393\n",
+      "Residual  3246.859333  58.0       NaN       NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "formula = 'len ~ C(supp)'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
    ]
   },
   {
@@ -136,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -178,6 +436,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('OJ', 0.5), ('OJ', 1.0)) 4.030331623994243e-12\n",
+      "(('OJ', 0.5), ('OJ', 2.0)) 0.0\n",
+      "(('OJ', 0.5), ('VC', 0.5)) 1.4726832244793542e-06\n",
+      "(('OJ', 0.5), ('VC', 1.0)) 0.00044290443031336224\n",
+      "(('OJ', 0.5), ('VC', 2.0)) 1.7763568394002505e-15\n",
+      "(('OJ', 1.0), ('OJ', 2.0)) 0.00028819151901204876\n",
+      "(('OJ', 1.0), ('VC', 0.5)) 0.0\n",
+      "(('OJ', 1.0), ('VC', 1.0)) 6.6660528208473124e-09\n",
+      "(('OJ', 1.0), ('VC', 2.0)) 0.0035592713576999557\n",
+      "(('OJ', 2.0), ('VC', 0.5)) 0.0\n",
+      "(('OJ', 2.0), ('VC', 1.0)) 0.0\n",
+      "(('OJ', 2.0), ('VC', 2.0)) 0.9366612287136706\n",
+      "(('VC', 0.5), ('VC', 1.0)) 0.0\n",
+      "(('VC', 0.5), ('VC', 2.0)) 0.0\n",
+      "(('VC', 1.0), ('VC', 2.0)) 3.5853542357244805e-12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:872: RuntimeWarning: invalid value encountered in greater\n",
+      "  cond = logical_and(cond, (asarray(arg) > 0))\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in greater\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in less\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:1738: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "  cond2 = (x >= self.b) & cond0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "groups = [group[0] for group in df.groupby(['supp', 'dose'])['len']]\n",
+    "combos = combinations(groups, 2)\n",
+    "for combo in combos:\n",
+    "    supp1 = combo[0][0]\n",
+    "    dose1 = combo[0][1]\n",
+    "    supp2 = combo[1][0]\n",
+    "    dose2 = combo[1][1]\n",
+    "    sample1 = df[(df.supp == supp1) & (df.dose == dose1)]\n",
+    "    sample2 = df[(df.supp == supp2) & (df.dose == dose2)]\n",
+    "    p = p_value2(sample1, sample2)\n",
+    "    print(combo, p[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
